* Finding Daron's lost statuette.
* Finding Den's body.
* Finding Diego's bag of gold.
* Finding Garett's Golden Compass.
* Finding Huno's steel delivery.
* Finding Lance's body.
* Finding a sextant for Ramirez.
* Finding an orc weapon for Harad.
* Finding ring and rapier for bandit trader quest.
* Finding stone tablet for Franco.
* Finding the Claw of Beliar.
* Finding the Sun Aloe.
* Finding the blank runestone for the Path of Believers quest.
* Finding the recipe for Neoras.
* Killing Hosk-Pak.
* Killing Juan.
* Killing Orc Colonel.
* Killing dragons in the Valley of Mines.
* Looting Malcom after Owen tells what happened to him.
* Reading Lutero's note about pawning his Blood Chalice.
* Using Oblivion spell while Ignaz' quest is running.

Following events do not create overlapping messages:
* Kati handing out bread, water and meat.

New/updated item models:
* All potions
* Animal trophy hearts: Dragon hearts (fire, ice, rock), Heart of a Demon, Heart of a Swamp Golem, Undead Dragon Soul Stone
* Animal trophy skins: Boar/Warg Skin, Hide of a Black Troll, Ice Wolf Skin, Lurker Skin (Talbin's)
* Animal trophy other: Field Raider Mandibles, Leader of the Pack's Claws, Lurker Claw, Mantis head, Minecrawler Mandibles and Plates
* Books and documents: All maps, all books of Runemaking, 'The Halls of Irdorath', Almanac of the Possessed, Babo's pinup, Diary of the novice black magician, Message in a Bottle, NH's wanted note
* Food and drinks: All rum and grog, Clam meat, Coragon's Beer, Fire strips, Fish Soup, Edda's Fish Soup, Herring, Honey, Milk, Sheep Sausage, Theckla's stew
* Jewelry: All jewelery set items, Aquamarine rings, Divine Aura of Innos, Franco's amulet, Guild ring, Morgan's ring, Will-o'-the-wisp amulet, Ring of the Orcish Warlords, two new ring models
* Plants: Dragonroot, King's Sorrel, Sun Aloe, Snapper Weed, Swampweed, Weed
* Weapons: Fire and Magic ammunition, Krush Agash
* Blood Chalice
* Brush
* Coragon's Silver
* Gold/Silver Necklaces