@@ -45,7 +45,6 @@ STORY\B_Content\B_Greg_ComesToDexter.d
 STORY\B_Content\B_Upgrade_Hero_HackChance.d
 STORY\B_CONTENT\B_CountCanyonRazor.d
 STORY\B_CONTENT\B_MALCOMEXIDENT.d
-STORY\B_CONTENT\B_PlayerLootedItem.d
 
 
 STORY\B_Content\C_ArtefaktValues.d
@@ -60,6 +59,7 @@ STORY\Log_Entries\B_Checklog.d
 
 STORY\B_Story\B_GivePlayerXP.d
 STORY\B_Content\B_SCUsesRake.d
+STORY\B_CONTENT\B_PlayerLootedItem.d
 
 AI\MAGIC\B_MagicHurtNpc.d
 
